Upgrade Lumix with resilience, consistency and English translations
- Translated comments and logs from Vietnamese to English in `go-backend`, `indexer`, `lith-ranker`, `crawler`, and `docker-compose.yml`.
- go-backend: Added Rate Limit middleware and Graceful Shutdown.
- indexer: Added Graceful Shutdown and Periodic Deletion Sync (Garbage Collection).
- lith-ranker: Added fail-safe node limit to prevent OOM.
- docker-compose: Added resource limits for js-renderer and lith-ranker.
- migrations: Added initial migration structure.

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,13 @@
 venv/
 lith-ranker/lith-ranker
 
-# Vegh files
+# Vegh files (CodeTease's Snapshot tool)
 *.vegh 
 .veghcache
-.veghhooks.json
+# PyVegh's Vegh Hooks configuration file
+.veghhooks.json 
+# Old Vegh files extension, but kept for backward compatibility
+*.snap
 
 # Node
 node_modules/
