--- a/js-renderer/package.json
+++ b/js-renderer/package.json
@@ -4,6 +4,7 @@
   "main": "server.js",
   "dependencies": {
     "express": "^5.2.1",
+    "ioredis": "^5.8.2",
     "ipaddr.js": "^2.3.0",
     "playwright": "^1.57.0"
   }
