--- a/lith-ranker/Dockerfile
+++ b/lith-ranker/Dockerfile
@@ -1,4 +1,4 @@
-# Stage 1: Build (Tạo binary nhỏ gọn)
+# Stage 1: Build 
 FROM golang:1.25-alpine AS builder
 
 WORKDIR /app
@@ -9,15 +9,13 @@ RUN go mod download
 
 COPY . .
 
-# Build binary tên là "lith-ranker"
 RUN CGO_ENABLED=0 go build -ldflags "-s -w" -o /app/lith-ranker .
 
-# Stage 2: Run (Môi trường chạy siêu nhẹ)
+# Stage 2: Run 
 FROM alpine:latest
 RUN apk --no-cache add ca-certificates
 WORKDIR /root/
 
 COPY --from=builder /app/lith-ranker .
 
-# Chạy Lith Ranker
 CMD ["./lith-ranker"]
